--- a/static/signup-success.html
+++ b/static/signup-success.html
@@ -4,70 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 		<title>Cadastro Realizado - Gendix</title>
-		<style>
-			body {
-				font-family:
-					system-ui,
-					-apple-system,
-					sans-serif;
-				line-height: 1.6;
-				max-width: 600px;
-				margin: 0 auto;
-				padding: 1rem;
-				box-sizing: border-box;
-				text-align: center;
-			}
-			* {
-				box-sizing: border-box;
-			}
-			h1 {
-				margin-top: 2rem;
-				font-size: clamp(1.5rem, 5vw, 2rem);
-				color: #0070f3;
-			}
-			.success-icon {
-				width: 80px;
-				height: 80px;
-				margin: 2rem auto;
-				background-color: #4caf50;
-				border-radius: 50%;
-				position: relative;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-			}
-			.success-icon::after {
-				content: "";
-				width: 35px;
-				height: 20px;
-				border-left: 4px solid white;
-				border-bottom: 4px solid white;
-				transform: rotate(-45deg) translate(2px, -5px);
-			}
-			.message {
-				background-color: #f5f5f5;
-				padding: 1.5rem;
-				border-radius: 8px;
-				margin: 1.5rem 0;
-				font-size: 1.1rem;
-			}
-			.email {
-				font-weight: bold;
-				color: #0070f3;
-			}
-			.home-link {
-				display: inline-block;
-				margin-top: 2rem;
-				color: #0070f3;
-				text-decoration: none;
-				font-weight: bold;
-			}
-			.home-link:hover {
-				text-decoration: underline;
-			}
-		</style>
+		<link rel="stylesheet" href="/styles.css">
 	</head>
-	<body>
+	<body class="success-page">
 		<div class="success-icon"></div>
 		<h1>Cadastro Realizado com Sucesso!</h1>
 		
