--- a/static/signup.html
+++ b/static/signup.html
@@ -4,218 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 		<title>Cadastro</title>
+		<link rel="stylesheet" href="/styles.css">
 		<script src="/assets/zxcvbn.js"></script>
-		<style>
-			body {
-				font-family:
-					system-ui,
-					-apple-system,
-					sans-serif;
-				line-height: 1.6;
-				max-width: 600px;
-				margin: 0 auto;
-				padding: 2rem 1rem;
-				box-sizing: border-box;
-			}
-			* {
-				box-sizing: border-box;
-			}
-			h1 {
-				margin-top: 1rem;
-				font-size: clamp(1.5rem, 5vw, 2rem);
-			}
-			form {
-				margin-top: 2rem;
-				width: 100%;
-			}
-			.form-group {
-				margin-bottom: 1rem;
-				width: 100%;
-			}
-			label {
-				display: block;
-				margin-bottom: 0.5rem;
-				font-weight: bold;
-			}
-			input {
-				width: 100%;
-				max-width: 100%;
-				padding: 0.5rem;
-				border: 1px solid #ccc;
-				border-radius: 4px;
-				font-size: 16px;
-			}
-			button {
-				background-color: #0070f3;
-				color: white;
-				border: none;
-				padding: 0.5rem 1rem;
-				border-radius: 4px;
-				cursor: pointer;
-				font-size: 1rem;
-				max-width: 100%;
-				overflow: hidden;
-				text-overflow: ellipsis;
-				white-space: nowrap;
-			}
-			button:hover {
-				background-color: #0051cb;
-			}
-
-			button:disabled {
-				background-color: #cccccc;
-				color: #666666;
-				cursor: not-allowed;
-			}
-
-			/* Toggle switch styles */
-			.toggle-container {
-				display: flex;
-				justify-content: center;
-				margin: 2rem 0;
-				border-radius: 8px;
-				overflow: hidden;
-				width: 100%;
-				max-width: 100%;
-			}
-			.toggle-button {
-				flex: 1;
-				text-align: center;
-				padding: 0.8rem;
-				cursor: pointer;
-				background-color: #f0f0f0;
-				color: #333;
-				border: 1px solid #ddd;
-				transition: all 0.3s;
-				white-space: nowrap;
-				font-size: clamp(0.8rem, 4vw, 1rem);
-			}
-			.toggle-button:first-child {
-				border-radius: 4px 0 0 4px;
-			}
-			.toggle-button:last-child {
-				border-radius: 0 4px 4px 0;
-			}
-			.toggle-button.active {
-				background-color: #0070f3;
-				color: white;
-				border-color: #0070f3;
-			}
-
-			#pj-fields {
-				display: none;
-			}
-
-			.error-message {
-				color: #e53e3e;
-				font-size: 0.85rem;
-				margin-top: 0.3rem;
-			}
-
-			.password-strength-meter {
-				height: 5px;
-				width: 100%;
-				max-width: 100%;
-				background-color: #ddd;
-				border-radius: 3px;
-				margin-top: 5px;
-				overflow: hidden;
-			}
-
-			.password-strength-meter-fill {
-				height: 100%;
-				border-radius: 3px;
-				transition:
-					width 0.3s ease,
-					background-color 0.3s ease;
-				max-width: 100%;
-			}
-
-			.strength-0 {
-				width: 0%;
-				background-color: #ddd;
-			}
-			.strength-1 {
-				width: 25%;
-				background-color: #f44336;
-			}
-			.strength-2 {
-				width: 50%;
-				background-color: #ff9800;
-			}
-			.strength-3 {
-				width: 75%;
-				background-color: #ffeb3b;
-			}
-			.strength-4 {
-				width: 100%;
-				background-color: #4caf50;
-			}
-
-			.password-strength-text {
-				font-size: 0.8rem;
-				margin-top: 5px;
-			}
-
-			.spinner {
-				display: inline-block;
-				width: 1rem;
-				height: 1rem;
-				margin-right: 0.5rem;
-				border: 2px solid rgba(255, 255, 255, 0.3);
-				border-radius: 50%;
-				border-top-color: #fff;
-				animation: spin 1s ease-in-out infinite;
-				vertical-align: middle;
-			}
-
-			@keyframes spin {
-				to {
-					transform: rotate(360deg);
-				}
-			}
-
-			.submit-error {
-				color: #e53e3e;
-				margin-top: 1rem;
-				text-align: center;
-				display: none;
-			}
-
-			.password-container {
-				position: relative;
-			}
-
-			.password-toggle {
-				position: absolute;
-				right: 10px;
-				top: 50%;
-				transform: translateY(-50%);
-				cursor: pointer;
-				user-select: none;
-				color: #666;
-				font-size: 1.2rem;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				width: 30px;
-				height: 30px;
-				background: transparent;
-				border: none;
-				padding: 0;
-			}
-
-			.password-toggle:hover {
-				color: #333;
-			}
-
-			.password-toggle svg {
-				width: 20px;
-				height: 20px;
-				fill: currentColor;
-				display: block;
-			}
-		</style>
 	</head>
 	<body>
 		<h1>Cadastre-se</h1>
